getting-started.html

--- a/getting-started.html
+++ b/getting-started.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Class Project</title>
   <!-- Insert the model data for the Example component into the DOM -->
+  <link rel="stylesheet" type="text/css" href="path/to/Example.css">
+  
   <script src="modelData/example.js"></script>
 </head>
 
